tests/behavior/error/null_pointer_arithmetic7.bz
function main()
{
	let i = 0;
	let p1: ?*int32 = &i;
	let p2: ?*int32 = null;
	p1 - p2;
}
